--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,21 @@ small {
 body {
   font-family: Arial, sans-serif;
 }
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
